--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,56 @@
     <div class="projects">
       <div class="container">
         <div class="row">
+          <h3>Affinity Therapy Purley</h3>
+          <h4>HTML - CSS</h4>
+          <div class="col-sm-6 border text-left">
+            <a
+              href="https://www.affinitytherapypurley"
+              target="_blank"
+              title="link to Affinity Therapy Purley"
+            >
+              <img
+                src="images/affinity.png"
+                width="300px"
+                alt="link to affinity therapy purpley"
+            /></a>
+          </div>
+          <div class="col-sm-6 border text-left">
+            <br />
+
+            <h5>
+              <a
+                href="https://www.affinitytherapypurley"
+                target="_blank"
+                title="link to Affinity Therapy Purley"
+                >Affinity Therapy Purley
+              </a>
+            </h5>
+
+            <br />I designed and built this website for Malini at Affinity
+            Therapy Purley. This is one of the first websites that I have that I
+            had the pleasure of both desigining and building. Malini's business
+            has a really strong brand, which I was able to replicate through the
+            website. <br /><br />Malini told me she would like to include an
+            element of nature, so I used an image as a background, which
+            reflects the calm and tranquil nature of Malini and her way of
+            working.<br /><br />
+            <a
+              href="https://www.affinitytherapypurley"
+              target="_blank"
+              title="link to Affinity Therapy Purley"
+              >Affinity Therapy Purley
+            </a>
+
+            <br />
+            <br />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="projects">
+      <div class="container">
+        <div class="row">
           <h3>Inspirational Quote Generator</h3>
           <h4>JAVASCRIPT - HTML - CSS</h4>
           <div class="col-sm-6 border text-left">
@@ -100,14 +150,14 @@
             <br />I designed this website as part of a SheCodes monthly
             challenge. Rather than just choose a quote to display, I decided to
             make the website interactive, requiring the user to enter their
-            name, to recieve a personalised quote.
+            name, to recieve a personalised quote.<br /><br />
             <a
               href="https://bespoke-raindrop-998144.netlify.app/"
               target="_blank"
               title="link to inspirational quote website"
-              >get your inspirational quote!</a
+              >Get your inspirational quote!</a
             >
-            >
+
             <br />
             <br />
           </div>
