updated link to work

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
           <h4>HTML - CSS</h4>
           <div class="col-sm-6 border text-left">
             <a
-              href="https://www.affinitytherapypurley"
+              href="https://www.affinitytherapypurley.com"
               target="_blank"
               title="link to Affinity Therapy Purley"
             >
@@ -90,7 +90,7 @@
 
             <h5>
               <a
-                href="https://www.affinitytherapypurley"
+                href="https://www.affinitytherapypurley.com"
                 target="_blank"
                 title="link to Affinity Therapy Purley"
                 >Affinity Therapy Purley
@@ -106,7 +106,7 @@
             reflects the calm and tranquil nature of Malini and her way of
             working.<br /><br />
             <a
-              href="https://www.affinitytherapypurley"
+              href="https://www.affinitytherapypurley.com"
               target="_blank"
               title="link to Affinity Therapy Purley"
               >Affinity Therapy Purley
