changed link to 'visit'

--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
               href="https://www.affinitytherapypurley.com"
               target="_blank"
               title="link to Affinity Therapy Purley"
-              >Affinity Therapy Purley
+              >Visit
             </a>
 
             <br />
