--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row">
           <h3>Affinity Therapy Purley</h3>
-          <h4>HTML - CSS</h4>
+          <h4>HTML - CSS - RESPONSIVITY</h4>
           <div class="col-sm-6 border text-left">
             <a
               href="https://www.affinitytherapypurley.com"
