--- a/projects.html
+++ b/projects.html
@@ -121,6 +121,57 @@
     <div class="projects">
       <div class="container">
         <div class="row">
+          <h3>Affinity Therapy Purley</h3>
+          <h4>HTML - CSS - RESPONSIVITY</h4>
+          <div class="col-sm-6 border text-left">
+            <a
+              href="https://velvety-cucurucho-d146cc.netlify.app/"
+              target="_blank"
+              title="link to Pas"
+            >
+              <img
+                src="images/pas.png"
+                width="300px"
+                alt="link to pas de la casa"
+            /></a>
+          </div>
+          <div class="col-sm-6 border text-left">
+            <br />
+
+            <h5>
+              <a
+                href="https://velvety-cucurucho-d146cc.netlify.app/"
+                target="_blank"
+                title="link to Pas De La Casa"
+                >Pas De La Casa
+              </a>
+            </h5>
+
+            <br />I designed and built this website for Malini at Affinity
+            Therapy Purley. This is one of the first websites that I have that I
+            had the pleasure of both desigining and building. Malini's business
+            has a really strong brand, which I was able to replicate through the
+            website. <br /><br />Malini told me she would like to include an
+            element of nature, so I used an image as a background, which
+            reflects the calm and tranquil nature of Malini and her way of
+            working.<br /><br />
+            <a
+              href="https://velvety-cucurucho-d146cc.netlify.app/"
+              target="_blank"
+              title="link to Pas De La Casa "
+              >Visit
+            </a>
+
+            <br />
+            <br />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <div class="container">
+        <div class="row">
           <h3>Inspirational Quote Generator</h3>
           <h4>JAVASCRIPT - HTML - CSS</h4>
           <div class="col-sm-6 border text-left">
