adjusted project page to change into css responsive grid rather than bootstrap

--- a/projects.html
+++ b/projects.html
@@ -53,336 +53,196 @@
       <h2>projectsprojectsprojectsprojects</h2>
     </div>
     <br /><br />
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Projects</h3>
-          <h4>
-            <br />
-            I have thoroughly enjoyed working on passion projects, as well as
-            building websites as part of my SheCodes course.<br /><br />
-            Below are some of the projects I have designed + built, using a
-            variety of languages + techniques! Thank you for checking them out.
-          </h4>
-        </div>
+    <div class="grid-projects">
+      <div class="box">
+        <h3>Affinity Therapy Purley</h3>
+        <h4>HTML - CSS - RESPONSIVITY</h4>
+        <a
+          href="https://www.affinitytherapypurley.com"
+          target="_blank"
+          title="link to Affinity Therapy Purley"
+        >
+          <img
+            src="images/affinity.png"
+            width="300px"
+            alt="link to affinity therapy purpley"
+            class="grid-image"
+        /></a>
+        <p>
+          I designed and built this website for Malini at Affinity Therapy
+          Purley. This is one of the first websites that I have that I had the
+          pleasure of both desigining and building. Malini's business has a
+          really strong brand, which I was able to replicate through the
+          website.
+        </p>
+        <a
+          href="https://www.affinitytherapypurley.com"
+          target="_blank"
+          title="link to Affinity Therapy Purley"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>Pas de la Casa</h3>
+        <h4>HTML - CSS - RESPONSIVITY</h4>
+        <a
+          href="https://velvety-cucurucho-d146cc.netlify.app/"
+          target="_blank"
+          title="link to Pas"
+        >
+          <img src="images/pas.png" width="300px" alt="link to pas de la casa"
+        /></a>
+        <p>
+          I designed and built this website as part of SheCodes homework. The
+          website had to be about something I was passionate about, including
+          grids, header, hero, images, footer and fully responsive. I then had
+          to publish the website through GitHub and Netlify.
+        </p>
+
+        <a
+          href="https://velvety-cucurucho-d146cc.netlify.app/"
+          target="_blank"
+          title="link to Pas"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>Quote Generator</h3>
+        <h4>JAVASCRIPT - HTML - CSS</h4>
+
+        <a
+          href="https://bespoke-raindrop-998144.netlify.app/"
+          target="_blank"
+          title="link to inspirational quote website"
+        ></a>
+        <img
+          src="images/quote.png"
+          width="300px"
+          alt="link to inspirational quote generator"
+        />
+        <p>
+          I designed this website as part of a SheCodes monthly challenge.
+          Rather than just choose a quote to display, I decided to make the
+          website interactive, requiring the user to enter their name, to
+          recieve a personalised quote. Why not have a go youself?
+        </p>
+
+        <a
+          href="https://bespoke-raindrop-998144.netlify.app/"
+          target="_blank"
+          title="link to inspirational quote website"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>World Time</h3>
+        <h4>JAVASCRIPT - CDN - NETLIFY</h4>
+
+        <a
+          href="https://adorable-vacherin-85ae36.netlify.app/"
+          target="_blank"
+          title="link to world clock app"
+        >
+          <img src="images/time.png" width="300px" alt="link to world clock"
+        /></a>
+        <p>
+          This is a worldwide clock, which I designed and built myself. This
+          uses live information from live CDN to ensure the data is always
+          accurate. Simply enter the city and hey presto, there is the time!
+        </p>
+        <a
+          href="https://adorable-vacherin-85ae36.netlify.app/"
+          target="_blank"
+          title="link to world clock app"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>World Weather</h3>
+        <h4>JAVASCRIPT - CDN - MOMENT.JS</h4>
+
+        <a
+          href="https://jemweather.netlify.app/"
+          target="_blank"
+          title="link to world weather app"
+        >
+          <img
+            src="images/weather.png"
+            width="300px"
+            alt="link to world weather"
+        /></a>
+
+        <p>
+          I designed this website as part of my SheCodes homework. The website
+          is linked to live data, giving up to date information around worldwide
+          weather! This project was a challenge, but a really great learning
+          experience!
+        </p>
+
+        <a
+          href="https://jemweather.netlify.app/"
+          target="_blank"
+          title="link to world weather app"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>Beccie Dunn Fitness</h3>
+        <h4>FIGMA DESIGN</h4>
+
+        <a
+          href="https://www.becciedunnfitness.com"
+          target="_blank"
+          title="link to Beccie Dunn Fitness website"
+        >
+          <img
+            src="images/beccie.png"
+            width="300px"
+            alt="link to beccie dunn fitness"
+        /></a>
+
+        <p>
+          I designed this website for Beccie Dunn back in 2021, long before I
+          started to code myself. <br />She wanted the website to really reflect
+          her strength, resilience and positivity.
+        </p>
+        <a
+          href="https://www.becciedunnfitness.com"
+          target="_blank"
+          title="link to Beccie Dunn Fitness website"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
+        <h3>Bowen Head Toe Tail</h3>
+        <h4>FIGMA DESIGN</h4>
+
+        <a
+          href="https://www.bowenheadtoetail.com"
+          target="_blank"
+          title="link to Bowen Head Toe Tail website"
+        >
+          <img src="images/bowen.png" width="300px" alt="link to bowen therapy"
+        /></a>
+        <p>
+          This is another design of mine, for a canine bowen company. I designed
+          this website and passed on the Figma file to the developer, who built
+          the page for Sam.
+        </p>
+        <a
+          href="https://www.bowenheadtoetail.com"
+          target="_blank "
+          title="link to Bowen Head Toe Tail website"
+          class="visit-button"
+          >Visit</a
+        >
       </div>
     </div>
-    <br /><br />
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Affinity Therapy Purley</h3>
-          <h4>HTML - CSS - RESPONSIVITY</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://www.affinitytherapypurley.com"
-              target="_blank"
-              title="link to Affinity Therapy Purley"
-            >
-              <img
-                src="images/affinity.png"
-                width="300px"
-                alt="link to affinity therapy purpley"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-
-            <h5>
-              <a
-                href="https://www.affinitytherapypurley.com"
-                target="_blank"
-                title="link to Affinity Therapy Purley"
-                >Affinity Therapy Purley
-              </a>
-            </h5>
-
-            <br />I designed and built this website for Malini at Affinity
-            Therapy Purley. This is one of the first websites that I have that I
-            had the pleasure of both desigining and building. Malini's business
-            has a really strong brand, which I was able to replicate through the
-            website. <br /><br />Malini told me she would like to include an
-            element of nature, so I used an image as a background, which
-            reflects the calm and tranquil nature of Malini and her way of
-            working.<br /><br />
-            <a
-              href="https://www.affinitytherapypurley.com"
-              target="_blank"
-              title="link to Affinity Therapy Purley"
-              >Visit
-            </a>
-
-            <br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Affinity Therapy Purley</h3>
-          <h4>HTML - CSS - RESPONSIVITY</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://velvety-cucurucho-d146cc.netlify.app/"
-              target="_blank"
-              title="link to Pas"
-            >
-              <img
-                src="images/pas.png"
-                width="300px"
-                alt="link to pas de la casa"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-
-            <h5>
-              <a
-                href="https://velvety-cucurucho-d146cc.netlify.app/"
-                target="_blank"
-                title="link to Pas De La Casa"
-                >Pas De La Casa
-              </a>
-            </h5>
-
-            <br />I designed and built this website for Malini at Affinity
-            Therapy Purley. This is one of the first websites that I have that I
-            had the pleasure of both desigining and building. Malini's business
-            has a really strong brand, which I was able to replicate through the
-            website. <br /><br />Malini told me she would like to include an
-            element of nature, so I used an image as a background, which
-            reflects the calm and tranquil nature of Malini and her way of
-            working.<br /><br />
-            <a
-              href="https://velvety-cucurucho-d146cc.netlify.app/"
-              target="_blank"
-              title="link to Pas De La Casa "
-              >Visit
-            </a>
-
-            <br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Inspirational Quote Generator</h3>
-          <h4>JAVASCRIPT - HTML - CSS</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://bespoke-raindrop-998144.netlify.app/"
-              target="_blank"
-              title="link to inspirational quote website"
-            >
-              <img
-                src="images/quote.png"
-                width="300px"
-                alt="link to inspirational quote generator"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-
-            <h5>
-              <a
-                href="https://bespoke-raindrop-998144.netlify.app/"
-                target="_blank"
-                title="link to inspirational quote website"
-                >Inspirational Quote Generator</a
-              >
-            </h5>
-
-            <br />I designed this website as part of a SheCodes monthly
-            challenge. Rather than just choose a quote to display, I decided to
-            make the website interactive, requiring the user to enter their
-            name, to recieve a personalised quote.<br /><br />
-            <a
-              href="https://bespoke-raindrop-998144.netlify.app/"
-              target="_blank"
-              title="link to inspirational quote website"
-              >Get your inspirational quote!</a
-            >
-
-            <br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>World Time</h3>
-          <h4>JAVASCRIPT - CDN - NETLIFY</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://adorable-vacherin-85ae36.netlify.app/"
-              target="_blank"
-              title="link to world clock app"
-            >
-              <img
-                src="images/time.png"
-                width="300px"
-                alt="link to world clock"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <h5>
-              <a
-                href="https://adorable-vacherin-85ae36.netlify.app/"
-                target="_blank"
-                title="link to world clock app"
-                >World Clock</a
-              >
-            </h5>
-
-            <br />This is a worldwide clock, which I designed and built myself.
-            This uses live information from live CDN to ensure the data is
-            always accurate. <br />
-            <br />
-            Simply enter the city and hey presto, there is the time! <br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>World Weather</h3>
-          <h4>JAVASCRIPT - CDN - MOMENT.JS</h4>
-          <div class="col-sm-6 border text-left">
-            <a href="https://jemweather.netlify.app/" target="_blank">
-              title="link to world weather app"
-              <img
-                src="images/weather.png"
-                width="300px"
-                alt="link to world weather"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <h5>
-              <a
-                href="https://jemweather.netlify.app/"
-                target="_blank"
-                title="link to world weather app"
-                >World Weather</a
-              >
-            </h5>
-
-            <br />I designed this website as part of my SheCodes homework. The
-            website is linked to live data, giving up to date information around
-            worldwide weather! This project was a challenge, but a really great
-            learning experience!<br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Beccie Dunn Fitness</h3>
-          <h4>FIGMA DESIGN</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://www.becciedunnfitness.com"
-              target="_blank"
-              title="link to Beccie Dunn Fitness website"
-            >
-              <img
-                src="images/beccie.png"
-                width="300px"
-                alt="link to beccie dunn fitness"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <h5>
-              <a
-                href="https://www.becciedunnfitness.com"
-                target="_blank"
-                title="link to Beccie Dunn Fitness website"
-                >Beccie Dunn Fitness</a
-              >
-            </h5>
-
-            <br />I designed this website for Beccie Dunn, who is a PT in
-            Southampton. I designed this back in 2021, long before I started to
-            code myself. She wanted the website to really reflect her strength,
-            resilience and positivity. I passed the Figma file to the developer
-            who built it for Beccie. Beccie was super happy with the design,
-            usability and that it really reflected her branding.<br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Bowen Head Toe Tail</h3>
-          <h4>FIGMA DESIGN</h4>
-          <div class="col-sm-6 border text-left">
-            <a
-              href="https://www.bowenheadtoetail.com"
-              target="_blank"
-              title="link to Bowen Head Toe Tail website"
-            >
-              <img
-                src="images/bowen.png"
-                width="300px"
-                alt="link to bowen therapy"
-            /></a>
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <h5>
-              <a
-                href="https://www.bowenheadtoetail.com"
-                target="_blank "
-                title="link to Bowen Head Toe Tail website"
-                >Bowen Head Toe Tail</a
-              >
-            </h5>
-
-            <br />This is another design of mine, for a canine bowen company. I
-            designed this website and passed on the Figma file to the developer,
-            who built the page for Sam. I have tweaked the website for Sam
-            myself, since learning more about coding and always want to ensure
-            it reflects her current business offer and branding.<br />
-            <br />
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="footer">
-      <img src="images/jemlogo.png" width="60px" alt="" />
-      adesignjem@gmail.com |
-      <a
-        href="https://www.instagram.com/adesignjem"
-        target="_blank"
-        title="web design and developer instagram"
-      >
-        @adesignjem</a
-      >
-      | www.adesignjem.com
-    </footer>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
 </html>
