added bootstrap and python as languages to homepage

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           <li>CSS</li>
           <li>SEO</li>
           <li>JAVASCRIPT</li>
+          <li>BOOTSTRAP</li>
+          <li>PYTHON</li>
           <li>API</li>
           <li>VS CODE</li>
           <li>RESPONSIVITY</li>
