added footer to project page

--- a/projects.html
+++ b/projects.html
@@ -244,5 +244,17 @@
         >
       </div>
     </div>
+    <footer class="footer">
+      <img src="images/jemlogo.png" width="60px" alt="" />
+      adesignjem@gmail.com |
+      <a
+        href="https://www.instagram.com/adesignjem"
+        target="_blank"
+        title="link to adesignjem instagram"
+      >
+        @adesignjem</a
+      >
+      | www.adesignjem.com
+    </footer>
   </body>
 </html>
