--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,35 @@
     <br /><br />
     <div class="grid-projects">
       <div class="box">
+        <h3>Dictionary</h3>
+        <h4>REACT + API's</h4>
+
+        <a
+          href="https://creative-kelpie-9682b7.netlify.app/"
+          target="_blank"
+          title="link to dictionary app"
+        >
+          <img
+            src="images/dictionary.png"
+            width="300px"
+            alt="link to dictionary app"
+        /></a>
+        <p>
+          This was part of a SheCodes project, to use React and API's. Enter any
+          word and recieve the definition and pictures! I found react
+          challenging, but I learned a lot and look forward to progressing in
+          the future with this language.
+        </p>
+
+        <a
+          href="https://creative-kelpie-9682b7.netlify.app/"
+          target="_blank"
+          title="link to dictionary app"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
         <h3>Affinity Therapy Purley</h3>
         <h4>HTML - CSS - RESPONSIVITY</h4>
         <a
