--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <img
         class="jemlogo"
         src="images/jemlogo.png"
-        width="80px"
-        alt="a white j inside a blue circle"
+        width="200px"
+        alt="a pink j inside a white circle"
       />
     </div>
     <br />
@@ -91,6 +91,7 @@
           <li>CSS</li>
           <li>SEO</li>
           <li>JAVASCRIPT</li>
+          <li>REACT</li>
           <li>BOOTSTRAP</li>
           <li>PYTHON</li>
           <li>API</li>
