added new project

--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,32 @@
         >
       </div>
       <div class="box">
+        <h3>AI Project</h3>
+        <h4>AI + JAVASCRIPT</h4>
+
+        <a
+          href="https://serene-squirrel-ce9bc0.netlify.app/"
+          target="_blank"
+          title="link to AI app"
+        >
+          <img src="images/ai.png" width="300px" alt="link to ai app"
+        /></a>
+        <p>
+          Using AI has been a really fun part of the SheCodes diploma. I created
+          this website as part of a final project. The brief was to create a
+          webpage using AI, to return a recipe, poem, song, or similar! I chose
+          to do a healthy smoothie recipe, as I love them!
+        </p>
+
+        <a
+          href="https://creative-kelpie-9682b7.netlify.app/"
+          target="_blank"
+          title="link to dictionary app"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
         <h3>Affinity Therapy Purley</h3>
         <h4>HTML - CSS - RESPONSIVITY</h4>
         <a
