updated project links

--- a/projects.html
+++ b/projects.html
@@ -166,17 +166,16 @@
       <div class="box">
         <h3>Quote Generator</h3>
         <h4>JAVASCRIPT - HTML - CSS</h4>
-
         <a
           href="https://bespoke-raindrop-998144.netlify.app/"
           target="_blank"
-          title="link to inspirational quote website"
-        ></a>
-        <img
-          src="images/quote.png"
-          width="300px"
-          alt="link to inspirational quote generator"
-        />
+          title="link to Pas"
+        >
+          <img
+            src="images/quote.png"
+            width="300px"
+            alt="link to quote generator"
+        /></a>
         <p>
           I designed this website as part of a SheCodes monthly challenge.
           Rather than just choose a quote to display, I decided to make the
