added alaksa project

--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,35 @@
     <br /><br />
     <div class="grid-projects">
       <div class="box">
+        <h3>Travel Destination</h3>
+        <h4>RESPONSIVE</h4>
+
+        <a
+          href="https://precious-wisp-7829f0.netlify.app/"
+          target="_blank"
+          title="link to travel website , fully responsive"
+        >
+          <img
+            src="images/alaska.png"
+            width="300px"
+            alt="link to travel wesbite, fully responsive"
+        /></a>
+        <p>
+          This was part of a SheCodes challenge, to use my skills to showcase a
+          memorable travel destination. I chose Alaska, where I was lucky enough
+          to spend my honeymoon. Check out my fully responsive website, my
+          following the links, or clicking the image!
+        </p>
+
+        <a
+          href="https://precious-wisp-7829f0.netlify.app/"
+          target="_blank"
+          title="link to travel website , fully responsive"
+          class="visit-button"
+          >Visit</a
+        >
+      </div>
+      <div class="box">
         <h3>Dictionary</h3>
         <h4>REACT + API's</h4>
 
