added a picture of me to the about page with styling

--- a/about.html
+++ b/about.html
@@ -53,16 +53,23 @@
       <h2>aboutaboutaboutabout</h2>
     </div>
     <br /><br />
+
     <div class="projects">
       <div class="container">
         <div class="row">
           <h3>About me</h3>
+
           <h4>
+            <img
+              class="jemphoto"
+              src="/images/jemphoto.png"
+              alt="female web designer"
+            />
             <br />
             After 15 years working with children + young people, I've decided to
-            persue my passion in design + tech. <br /><br />I've always loved
-            designing things, from posters to creating brands in my free time, I
-            am truly obsessed. <br /><br />
+            persue my passion in design + tech. I've always loved designing
+            things, from posters to creating brands in my free time, I am truly
+            obsessed. <br /><br />
             I took the plunge in 2024 by enrolling on the SheCodes full
             developer course and have not looked back. <br /><br />
             I qualified as a Junior Web Developer in Spring 2025 + continue to
