--- a/about.html
+++ b/about.html
@@ -66,12 +66,11 @@
               alt="female web designer"
             />
             <br />
-            After 15 years working with children + young people, I've decided to
-            persue my passion in design + tech. I've always loved designing
-            things, from posters to creating brands in my free time, I am truly
-            obsessed. <br /><br />
-            I took the plunge in 2024 by enrolling on the SheCodes full
-            developer course and have not looked back. <br /><br />
+            I've always loved designing things, from posters to creating brands
+            in my free time, so I decided to complete a diploma in Web
+            Development, because ... why not? It is safe to safe I really
+            enjoyed it and I am truly obsessed. In a good way. <br /><br />
+            <br /><br />
             I qualified as a Junior Web Developer in Spring 2025 + continue to
             build + develop my skills (literally).
             <br /><br />
