--- a/about.html
+++ b/about.html
@@ -71,8 +71,10 @@
             Development, because ... why not? It is safe to safe I really
             enjoyed it and I am truly obsessed. In a good way. <br /><br />
             <br /><br />
-            I qualified as a Junior Web Developer in Spring 2025 + continue to
-            build + develop my skills (literally).
+            After 12 months of coding in my free time, I qualified as a Junior
+            Web Developer in Spring 2025 + continue to build + develop my skills
+            (literally). This is something I do in my free time, as it's just
+            super fun!
             <br /><br />
             I designed and built this website myself, which is hosted on
             <a href="https://www.netlify.com">Netlify</a> and is open sourced on
